[tool.poetry]
name = "castbot"
version = "0.1.0"
description = "This is CastBot - a bot that announces new NiSERCast episodes in our Discord server and allows all members to listen to the episodes within the Discord server."
authors = ["JeS24"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
discord = "^1.0.1"
feedparser = "^6.0.2"
flask = "^1.1.2"
pynacl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
